--- a/DApp_Task_12/package.json
+++ b/DApp_Task_12/package.json
@@ -28,6 +28,7 @@
         "@polyjuice-provider/web3": "0.0.1-rc6",
         "nervos-godwoken-integration": "0.0.6",
         "react-bootstrap": "^1.6.1",
+        "bootstrap": "^5.1.0",
         "react-toastify": "^7.0.4",
         "web3": "1.3.4"
     },
