--- a/DApp/package.json
+++ b/DApp/package.json
@@ -25,11 +25,11 @@
     },
     "types": "dist/js/src/index.d.ts",
     "dependencies": {
+        "@openzeppelin/contracts": "^4.3.0",
         "@polyjuice-provider/web3": "0.0.1-rc6",
         "bootstrap": "^5.1.0",
         "nervos-godwoken-integration": "0.0.6",
         "react-bootstrap": "^1.6.1",
-        "bootstrap": "^5.1.0",
         "react-toastify": "^7.0.4",
         "web3": "1.3.4"
     },
