modified:   ../DApp/package.json 	deleted:    contracts/BayouStorage.sol 	modified:   package.json 	deleted:    src/lib/contracts/BayouStorageWrapper.ts 	deleted:    src/types/BayouStorage.d.ts 	modified:   src/ui/app.tsx 	modified:   yarn.lock 	build/ 	dist/ 	node_modules/ 	src/types/NotarizingDocument.d.ts 	src/types/Ownable.d.ts

--- a/DApp/package.json
+++ b/DApp/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "blockchain-workshop",
+    "name": "notarizing-dapp",
     "description": "",
     "license": "MIT",
     "author": "",
